Specific body type for swagger
