# docs/swagger.json
@@ -81,7 +81,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.campaignsBody"
+                            "$ref": "#/definitions/handlers.campaignsBodySwagger"
                         }
                     }
                 ],
@@ -135,7 +135,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.campaignsBody"
+                            "$ref": "#/definitions/handlers.campaignsBodySwagger"
                         }
                     }
                 ],
@@ -451,7 +451,21 @@
                 }
             }
         },
-        "handlers.campaignsBody": {
+        "handlers.campaignsBodyContextSwagger": {
+            "type": "object",
+            "properties": {
+                "key_bool": {
+                    "type": "boolean"
+                },
+                "key_number": {
+                    "type": "number"
+                },
+                "key_string": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.campaignsBodySwagger": {
             "type": "object",
             "required": [
                 "context",
@@ -459,8 +473,7 @@
             ],
             "properties": {
                 "context": {
-                    "type": "object",
-                    "additionalProperties": true
+                    "$ref": "#/definitions/handlers.campaignsBodyContextSwagger"
                 },
                 "trigger_hit": {
                     "type": "boolean"
